--- a/webMetics/Views/Tema/CrearTema.cshtml
+++ b/webMetics/Views/Tema/CrearTema.cshtml
@@ -2,102 +2,99 @@
 @using webMetics.Controllers
 @{
     ViewBag.Title = "Crear Tema";
-}
-<!DOCTYPE html>
 
-<html>
-<head>
-</head>
-<body>
-    @if (ViewBag.Id != "" && ViewBag.Role == 1)
-    {
-        using (Html.BeginForm("CrearTema", "Tema", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
+}
+
+@if (ViewBag.Id != "" && ViewBag.Role == 1)
+{
+    <div class="contenedor-tipos-actividades container-fluid">
+        @if (urlReferrer != null)
+        {
+            <div class="d-flex justify-content-start mb-3">
+                <a class="text-dark fs-4" onclick="history.go(-1); return false;" href="#">
+                    <i class="bi bi-arrow-left"></i>
+                </a>
+            </div>
+        }
+
+        @using (Html.BeginForm("CrearTema", "Tema", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
-            <div class="form-horizontal">
-                <h1 class="mt-5">Crear tema</h1>
-                <h5>Inserte los siguientes datos:</h5>
-                <h6 style="color:red"> * Son campos obligatorios</h6>
-                <hr />
+            <h1>@ViewBag.Title</h1>
+            <hr />
 
-                @if (ViewBag.Message != null)
-                {
-                    if (ViewBag.ExitoAlCrear != null)
-                    {
-                        <div class="alert alert-success alert-dismissible fade show" role="alert">
-                            @ViewBag.Message
-                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
-                    }
-                    else
-                    {
-                        <div class="alert alert-dark alert-dismissible fade show" role="alert">
-                            @ViewBag.Message
-                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
-                    }
-                }
+            if (ViewBag.ErrorMessage != null)
+            {
+                <div class="alert alert-dark alert-dismissible fade show mx-2" role="alert">
+                    <span>@ViewBag.ErrorMessage</span>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            }
+            if (ViewBag.SuccessMessage != null)
+            {
+                <div class="alert alert-success alert-dismissible fade show mx-2" role="alert">
+                    <span>@ViewBag.SuccessMessage</span>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            }
 
-                <div class="row">
-                    <div class="col">
-                        <div class="container">
-                            <div class="form-group">
-                                @Html.LabelFor(temaModel => temaModel.categoria, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                                @Html.DropDownList("categoria", ViewData["Categorias"] as List<SelectListItem>, "---", new { @class = "form-select" })
-                                @Html.ValidationMessageFor(temaModel => temaModel.categoria, "", new { @class = "text-danger" })
-                            </div>
-
-                            <div class="form-group">
-                                @Html.LabelFor(temaModel => temaModel.nombre, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                                @Html.TextBoxFor(temaModel => temaModel.nombre, new { @class = "form-control", @maxlength = "64" })
-                                @Html.ValidationMessageFor(temaModel => temaModel.nombre, "", new { @class = "text-danger" })
-                            </div>
-
-                            <div class="form-group">
-                                @Html.LabelFor(temaModel => temaModel.tipoActividad, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                                @Html.DropDownList("tipoActividad", ViewData["TipoActividad"] as List<SelectListItem>, "---", new { @class = "form-select" })
-                                @Html.ValidationMessageFor(temaModel => temaModel.tipoActividad, "", new { @class = "text-danger" })
-                            </div>
-
-                            <div class="form-group">
-                                @Html.LabelFor(temaModel => temaModel.asesorPrincipal, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                                @Html.DropDownList("asesorPrincipal", ViewData["Asesores"] as List<SelectListItem>, "---", new { @class = "form-select" })
-                                @Html.ValidationMessageFor(temaModel => temaModel.asesorPrincipal, "", new { @class = "text-danger" })
-                            </div>
-
-                            <div class="form-group">
-                                @Html.LabelFor(temaModel => temaModel.asesoresApoyo, new { Style = "font-size:22px" })
-                                @Html.DropDownListFor(temaModel => temaModel.asesoresApoyo, new MultiSelectList(ViewBag.Asesores, "Value", "Text"), new { @class = "form-select", id = "multiSelectAsesores", multiple = "multiple" })
-                                @Html.ValidationMessageFor(temaModel => temaModel.asesoresApoyo, "", new { @class = "text-danger" })
-                            </div>
+            <div class="row mb-1">
+                <div class="col">
+                    <div class="container">
+                        <div class="form-group mt-1">
+                            @Html.LabelFor(temaModel => temaModel.categoria, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                            @Html.DropDownList("categoria", ViewData["Categorias"] as List<SelectListItem>, "---", new { @class = "form-select" })
+                            @Html.ValidationMessageFor(temaModel => temaModel.categoria, "", new { @class = "text-danger" })
                         </div>
 
-                        <div class="row justify-content-center m-4">
-                            <div class="col-auto">
-                                @Html.ActionLink("Cancelar", "Index", "Home", new { }, new { @class = "btn btn-secondary btn-block" })
-                            </div>
-                            <div class="col-auto">
-                                <input type="submit" class="btn btn-primary btn-block" value="Guardar" />
-                            </div>
+                        <div class="form-group mt-1">
+                            @Html.LabelFor(temaModel => temaModel.nombre, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                            @Html.TextBoxFor(temaModel => temaModel.nombre, new { @class = "form-control", @maxlength = "64" })
+                            @Html.ValidationMessageFor(temaModel => temaModel.nombre, "", new { @class = "text-danger" })
+                        </div>
+
+                        <div class="form-group mt-1">
+                            @Html.LabelFor(temaModel => temaModel.tipoActividad, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                            @Html.DropDownList("tipoActividad", ViewData["TipoActividad"] as List<SelectListItem>, "---", new { @class = "form-select" })
+                            @Html.ValidationMessageFor(temaModel => temaModel.tipoActividad, "", new { @class = "text-danger" })
+                        </div>
+
+                        <div class="form-group mt-1">
+                            @Html.LabelFor(temaModel => temaModel.asesorPrincipal, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                            @Html.DropDownList("asesorPrincipal", ViewData["Asesores"] as List<SelectListItem>, "---", new { @class = "form-select" })
+                            @Html.ValidationMessageFor(temaModel => temaModel.asesorPrincipal, "", new { @class = "text-danger" })
+                        </div>
+
+                        <div class="form-group mt-1">
+                            @Html.LabelFor(temaModel => temaModel.asesoresApoyo, new { Style = "font-size:22px" })
+                            @Html.DropDownListFor(temaModel => temaModel.asesoresApoyo, new MultiSelectList(ViewBag.Asesores, "Value", "Text"), new { @class = "form-select", id = "multiSelectAsesores", multiple = "multiple" })
+                            @Html.ValidationMessageFor(temaModel => temaModel.asesoresApoyo, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="row justify-content-center m-4">
+                        <div class="col-auto">
+                            <a href="#" class="btn btn-secondary btn-block" onclick="history.go(-1); return false;">Cancelar</a>
+                        </div>
+                        <div class="col-auto">
+                            <input type="submit" class="btn btn-primary btn-block" value="Guardar" />
                         </div>
                     </div>
                 </div>
             </div>
         }
-    }
-    else
-    {
-        await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
-    }
-</body>
-</html>
+    </div>
+}
+else
+{
+    await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
+}
 
 <script>
     $(function () {
         $('#multiSelectAsesores').chosen({ placeholder_text_multiple: "  ---" });
         document.getElementById("multiSelectAsesores_chosen").style["width"] = "100%";
     });
-
 </script>
 
 
